<resources>
    <string name="app_name">android-ui-kit</string>
    <string name="default_title_dialogs_header">Dialogs</string>
    <string name="search_component_hint">Input text...</string>
    <string name="yesterday">Yesterday</string>
    <string name="turn_off_notifications">Turn notifications off</string>
    <string name="leave_dialog">Leave dialog</string>
    <string name="dialog_type">Dialog type</string>
    <string name="private_dialog">Private</string>
    <string name="group_dialog">Group</string>
    <string name="enter_name">Enter name</string>
    <string name="create_dialog">Create dialog</string>
    <string name="remove_photo">Remove photo</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="image">Image</string>
    <string name="permission_alert_text">The app needs you to grant this permission in order to work properly. Will you let it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="permission_denied">Permission denied</string>
    <string name="wrong_dialog_type">Wrong dialog type</string>
    <string name="create">Create</string>
    <string name="next">Next</string>
    <string name="syncing">Syncing…</string>
    <string name="edit">Edit</string>
    <string name="dialog_info">Dialog information</string>
    <string name="members">Members</string>
    <string name="add_members">Add members</string>
    <string name="change_photo">Change photo</string>
    <string name="change_dialog_name">Change dialog name</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="change_name">Change name</string>
    <string name="admin">Admin</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="type_message">Type message</string>
    <string name="take_photo">Take photo from camera</string>
    <string name="take_video">Take video from camera</string>
    <string name="photo_video">Photo and video</string>
    <string name="file">File</string>
    <string name="send_attachment">Send attachment</string>
    <string name="new_group_dialog">New group dialog</string>
    <string name="menu_item_ai_answer_assistant">AI Assist Answer</string>
    <string name="error_init_ai_answer_assistant">The AI Assist Answer has not been configured. \nPlease setup AI Assist Answer by
        adding OpenAIToken or ProxyServer</string>
    <string name="error_init_ai_rephrase">The AI Rephrase has not been configured. \nPlease setup AI Rephrase adding
        OpenAIToken or ProxyServer</string>
    <string name="error_init_ai_translate">The AI Translate has not been configured. \nPlease setup AI Translate by
        adding OpenAIToken or ProxyServer</string>
    <string name="show_translate">Show translation</string>
    <string name="show_original">Show original</string>
    <string name="tone">tone</string>

    <string name="messages_selected">%s messages selected</string>
    <string name="empty_messages_selected">0 messages selected</string>
    <string name="forward">Forward</string>
    <string name="forwarded_from_with_name">Forwarded from %s</string>
    <string name="replied_to_with_name">Replied to %s</string>
    <string name="replied_to">Replied to</string>
    <string name="forwarded_from">Forwarded from</string>
    <string name="message_forwarded_to">Message forwarded to %s</string>
    <string name="reply">Reply</string>
    <string name="unknown">Unknown</string>
</resources>