<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clParent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    android:paddingVertical="24dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/roboto_500"
        android:paddingStart="24dp"
        android:text="@string/change_name"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etChangeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/primary"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:maxLength="60"
        android:maxLines="1"
        android:textColor="@color/textColor"
        android:textCursorDrawable="@null"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:searchHintIcon="@null" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/roboto_500"
        android:padding="8dp"
        android:text="@string/cancel"
        android:textColor="@color/primary"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/tvOk"
        app:layout_constraintTop_toBottomOf="@+id/etChangeName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/roboto_500"
        android:padding="8dp"
        android:text="@string/ok"
        android:textColor="@color/primary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etChangeName" />
</androidx.constraintlayout.widget.ConstraintLayout>