<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clParent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:ellipsize="end"
        android:fontFamily="@font/roboto_500"
        android:gravity="center_vertical"
        android:lines="1"
        android:text="@string/dialog_type"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/btnCross"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="0dp" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnCross"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:background="@android:color/transparent"
        android:padding="20dp"
        android:src="@drawable/cross"
        app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvTitle" />

    <View
        android:id="@+id/vDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividerColor"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llPrivate"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/llGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vDivider">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivPrivate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_private" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPrivate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/private_dialog"
            android:textColor="@color/textColor"
            android:textSize="12sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llGroup"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/llPrivate"
        app:layout_constraintTop_toBottomOf="@+id/vDivider">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_group" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:text="@string/group_dialog"
            android:textColor="@color/textColor"
            android:textSize="12sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>