<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by Injoit on 3.11.2023.
  ~ Copyright © 2023 Quickblox. All rights reserved.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.quickblox.android_ui_kit.presentation.screens.dialogs.DialogsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clHeader"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_500"
            android:gravity="center_vertical"
            android:lines="1"
            android:text="@string/empty_messages_selected"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/btnRight"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="-1dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnRight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto_500"
            android:padding="16dp"
            android:text="@string/cancel"
            android:textColor="@color/primary"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <View
            android:id="@+id/vDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dividerColor"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.quickblox.android_ui_kit.presentation.components.messages.MessagesComponentImpl
        android:id="@+id/rvMessages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/clForward"
        app:layout_constraintTop_toBottomOf="@+id/clHeader" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clForward"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:id="@+id/vForwardDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dividerColor"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvForward"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto_500"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/forward"
            android:textColor="@color/primary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
